# joft

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  joft.config.toml.default  joft.py  pyproject.toml  tox.ini
.github/workflows/: ci.yml
docs/: actions.md  introduction.md
joft/: actions.py  base.py  cli.py  logger.py  models.py  utils.py
src/joft/: cli.py
tests/: test_actions.py  test_base.py  test_logger.py  test_models.py  test_utils.py
tests/mock_data/: invalid.yaml  valid.yaml
